<resources>
    <!--nombre app-->
    <string name="app_name">Unifranzitos</string>

    <!--pantalla uno-->
    <string name="title1">Bienvenido</string>
    <string name="desc1">Campeonato de fútbol UnifranZitos a nivel local y todas las sedes.</string>

    <!--pantalla dos-->
    <string name="title2">Grandes premios</string>
    <string name="desc2">Se tiene categoría varones y mujeres con premiacion hasta el 3er lugar</string>

    <!--pantalla tres-->
    <string name="title3">Inscripcion</string>
    <string name="desc3">Inscribe a tu equipo desde la App</string>

    <!--botonera-->
    <string name="next">Siguiente</string>
    <string name="back">Atrás</string>
    <string name="done">Finalizar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Words to put on Login-->
    <string name="eMail">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>

<!--    Calculator Words-->
    <string name="respuesta">Respuesta</string>
    <string name="sumar">+</string>
    <string name="rest">-</string>
    <string name="multi">*</string>
    <string name="div">/</string>
    <string name="numero1">Ingrese Numero 1</string>
    <string name="numero2">Ingrese Numero 2</string>
    <string name="btClean">Clean</string>
    <string name="btCal2">SCientific</string>
    <string name="Titulo">Calculadora Cientifica</string>


</resources>
