<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Onboarding.LoginFragment"
    android:background="@drawable/fondouf3">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imgWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/logounigranzitos" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/eMail"
        android:fontFamily="@font/baumans"
        android:gravity="left"
        android:padding="8dp"
        android:textSize="20sp"
        android:background="@drawable/style_edit_text">
    </EditText>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/Password"
        android:fontFamily="@font/baumans"
        android:gravity="left"
        android:padding="10dp"
        android:textSize="20sp"
        android:background="@drawable/style_edit_text">
    </EditText>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:fontFamily="@font/aclonica"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:textSize="23sp"
        android:background="@drawable/style_button">
    </Button>
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:fontFamily="@font/aclonica"
        android:padding="15dp"
        android:textSize="23sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/style_button">
    </Button>
    <LinearLayout
        android:id="@+id/layoutNext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textPrevLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            android:gravity="bottom|start"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:fontFamily="@font/baumans"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

</LinearLayout>
